<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        android:paddingStart="12dp"
        android:paddingTop="12dp"
        android:paddingEnd="8dp"
        android:paddingBottom="12dp">

        <ImageView
            android:layout_width="93dp"
            android:layout_height="93dp"
            android:contentDescription="@string/context_of_image"
            android:src="@drawable/person_image" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:gravity="start"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/dm_sans"
                android:text="@string/person_name"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/dm_sans"
                android:text="@string/engineer"

                android:textColor="#87122940"
                android:textSize="12sp"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:drawablePadding="4dp"
                android:fontFamily="@font/dm_sans"
                android:text="@string/uk"
                android:textColor="#60122940"
                android:textSize="12sp"
                app:drawableStartCompat="@drawable/ic_icon" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/dm_sans"
                    android:text="@string/_150_reviews"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:fontFamily="@font/dm_sans"
                    android:text="@string/_4_5"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="10dp"

                    android:layout_height="12dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/context_of_image"
                    android:src="@drawable/ic_star_4" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="8dp"
            android:gravity="end"
            android:orientation="vertical">
            <TextView
                android:layout_width="38dp"
                android:layout_height="20dp"
                android:layout_gravity="end"
                android:layout_marginBottom="8dp"
                android:background="@drawable/shape"
                android:fontFamily="@font/dm_sans"
                android:gravity="center"
                android:text="@string/_3h"
                android:textColor="@color/white"
                android:textSize="12sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="9dp"
                android:fontFamily="@font/dm_sans"
                android:text="@string/russian"
                android:textColor="#87122940"
                android:textSize="12sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dm_sans"
                android:text="@string/_5_days_ago"
                android:textColor="#38122940"
                android:textSize="12sp"

                />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>

